--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Tormented Demon Helper
+author=Red Rookie
+description=Adds QOL for fighting Tormented Demons
+tags=combat,pve,pvm,slayer
+plugins=TormentedDemonHelperPlugin
