--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Tormented Demon Helper
 author=Red Rookie
-description=Adds QOL for fighting Tormented Demons
+description=Provides QoL improvements for fighting Tormented Demons
 tags=combat,pve,pvm,slayer
 plugins=TormentedDemonHelperPlugin
