Updated tags and added an icon

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Tormented Demon Helper
 author=Red Rookie
 description=Provides QoL improvements for fighting Tormented Demons
-tags=combat,pve,pvm,slayer
+tags=combat,pve,pvm,slayer,td,tormented demon
 plugins=TormentedDemonHelperPlugin
