Corrected runelight-plugin.properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
 displayName=Tormented Demon Helper
 author=Red Rookie
+support=https://github.com/sreilly64/tormented-demon-helper/issues
 description=Provides QoL improvements when fighting Tormented Demons
 tags=combat,pve,pvm,slayer,td,tormented demon
-plugins=TormentedDemonHelperPlugin
+plugins=rr.helpers.tormenteddemonhelper.TormentedDemonHelperPlugin
